@@ -224,3 +224,5 @@ Entity中toVo区别是否忽略大小写
 1、对Setting parse 的null不打印日志
 2、对对象克隆做了强化，修复无法反射调用父类方法的问题
 3、FileUtil中某些方法返回File对象，方便操作
+4、对Db中的方法做修正
+5、修复FileUtil.loopFiles方法过滤条件为空时全部过滤问题
